--- a/monitoringService/src/main/resources/application.properties
+++ b/monitoringService/src/main/resources/application.properties
@@ -30,3 +30,10 @@ logging.level.ro.tuc=warn
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8080}
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
