--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,10 @@ services:
       - DB_DBNAME=user-service
       - DB_USER=postgres
       - DB_PASSWORD=root
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_RABBITMQ_PORT=5672
+      - SPRING_RABBITMQ_USERNAME=guest
+      - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
 
@@ -134,6 +138,10 @@ services:
       - DB_DBNAME=device-service
       - DB_USER=postgres
       - DB_PASSWORD=root
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_RABBITMQ_PORT=5672
+      - SPRING_RABBITMQ_USERNAME=guest
+      - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
 
@@ -150,6 +158,10 @@ services:
       - DB_DBNAME=auth-service
       - DB_USER=postgres
       - DB_PASSWORD=root
+      - SPRING_RABBITMQ_HOST=rabbitmq
+      - SPRING_RABBITMQ_PORT=5672
+      - SPRING_RABBITMQ_USERNAME=guest
+      - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
 
