--- a/authService/src/main/resources/application.properties
+++ b/authService/src/main/resources/application.properties
@@ -34,3 +34,11 @@ jwt.secret = 3mSatpbK1xv/heVb4aUnRsl6tm7hrGDl5XnkOVNlJTs=
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8080}
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
