--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,11 @@ services:
       - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db-users:
+        condition: service_started
 
   device-service:
     build:
@@ -144,6 +149,11 @@ services:
       - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db-device:
+        condition: service_started
 
   auth-service:
     build:
@@ -164,6 +174,11 @@ services:
       - SPRING_RABBITMQ_PASSWORD=guest
     networks:
       my_net:
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db-auth:
+        condition: service_started
 
   monitoring-service:
     build:
